sidebar and post section behind nav; now fixed. margins and padding

--- a/style.css
+++ b/style.css
@@ -23,27 +23,27 @@ body {
 .site-header {
    background-color: #fff;
    position: fixed;
-   opacity: 1;
+   /*top: 0;*/
    width: 92.9%;
    height: 8rem;
    margin: 0 4rem;
 }
 
 .site-header h1 {
-   float: left !important;
-   font-family: 'Over the Rainbow' !important;
-   color: #1E90FF !important;
+   float: left;
+   font-family: 'Over the Rainbow';
+   color: #1E90FF;
    position: relative;
-   height: 0 auto;
    width: 0 auto;
    margin-left: 1rem;
    padding-left: 3rem;
-   font-size: 2rem !important;
+   font-size: 2rem;
 }
 
 a {
    list-style-type: none;
    text-decoration: none;
+   display: inline-block;
 }
 
 .menu li a:hover {
@@ -59,6 +59,7 @@ a {
 .menu ul {
    margin: .2rem 1rem 2rem 0;
    padding: 0 4rem 2rem 0;
+   clear: right;
 }
 
 .menu li {
@@ -86,7 +87,7 @@ a {
    overflow: none;
    font-size: 1.25rem;
    width: 37rem;
-   margin: 10rem 0 4rem 4rem;
+   margin: 12.5rem 0 4rem 4rem;
    float: left;
 }
 
@@ -102,27 +103,36 @@ a {
 #sidebar li a {
    background-size: 2rem;
    padding: 0.5rem;
-   color: #555555;;
+   color: #555555;
 }
 
-ul li {
+.post-section ul li {
    font-family: 'Open Sans', sans-serif;
    display: inline;
    list-style-type: none;
-   text-decoration: none;
+   margin-bottom: 10rem;
+   padding: 4rem;
 }
 
-ul li p {
+.post-section ul {
+   overflow: auto;
+   list-style-type: none;
    text-decoration: none;
    overflow: hidden;
    background-color: #fff;
-   padding: 6rem;
-   margin: 10.22rem 4rem 0 0;
-   width: 55%;
+   margin: 12.5rem 4rem 0 0;
+   padding-right: 4rem;
+   width: 50%;
    font-size: 1.5rem;
    color: #555555;
    float: right;
    border-bottom: 1px solid #dfdfdf;
+}
+
+ul .single-post li p {
+  /*margin: 4rem 0;*/
+  padding: 4rem;
+  border-bottom: .1rem solid #555555;
 }
 
 /*footer {
